# embassy

./: .gitmodules
.github/workflows/: vendor-graphics4d.yml
embassy-stm32-wpan/: Cargo.toml
examples/canboss-touch-host/: Cargo.toml  README.md  build.rs
examples/canboss-touch-host/.cargo/: config.toml
examples/canboss-touch-host/conf/: lv_conf.h
examples/canboss-touch-host/src/: main.rs
examples/canboss-touch-host/src/canboss/: canbus.rs  mod.rs
examples/canboss-touch-host/src/oxivgl/: mod.rs
examples/gen4-ft813-70ctp-h573i-dk/: Cargo.toml  README.md  RENDER_MODES.md  build.rs  build_codegen.rs
examples/gen4-ft813-70ctp-h573i-dk/.cargo/: config.toml
examples/gen4-ft813-70ctp-h573i-dk/conf/: lv_conf.h
examples/gen4-ft813-70ctp-h573i-dk/eds/: demo_drive.eds  demo_io.eds  network.json
examples/gen4-ft813-70ctp-h573i-dk/src/: board.rs  ft81x.rs  lib.rs  render_mode.rs  touch_can.rs
examples/gen4-ft813-70ctp-h573i-dk/src/canboss/: canbus.rs  mod.rs  platform.rs  sdo.rs  types.rs
examples/gen4-ft813-70ctp-h573i-dk/src/canboss/views/: hall.rs  menu.rs  mod.rs  node.rs
examples/gen4-ft813-70ctp-h573i-dk/src/oxivgl/: display.rs  eve_display.rs  hall_platform.rs  hall_view.rs  indev.rs  mod.rs  platform.rs  stats.rs  widget_view.rs
examples/gen4-rp2350-70ct-clb/: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  memory.x
examples/gen4-rp2350-70ct-clb/.cargo/: config.toml
examples/gen4-rp2350-70ct-clb/board/: gen4_rp2350_70ct.h
examples/gen4-rp2350-70ct-clb/c/: display.c  display.h  display_gfx4d.cpp  display_stub.c  graphics4d_scanout.h  pico_sdk_stubs.c
examples/gen4-rp2350-70ct-clb/cmake/graphics4d-lib/: CMakeLists.txt
examples/gen4-rp2350-70ct-clb/cmake/pico-embassy-lib/: CMakeLists.txt
examples/gen4-rp2350-70ct-clb/conf/: lv_conf.h
examples/gen4-rp2350-70ct-clb/scripts/: build-graphics4d-lib.sh  build-pico-embassy-lib.sh  check-graphics4d.sh  ci-install-graphics4d-deps.sh  commit-vendored-graphics4d.sh  filter-graphics4d-arm-lib.sh  filter-graphics4d-embassy-lib.sh  find-graphics4d-lib.ps1  graphics4d-worker-build.sh  init-graphics4d-pico.sh  inspect-graphics4d-pico.sh  install-graphics4d-from-sdk.sh  operate-graphics4d-worker.sh  setup-graphics4d-runner.sh  validate-graphics4d-lib.sh  vendor-graphics4d-into-repo.sh
examples/gen4-rp2350-70ct-clb/src/: dpi.rs  gen4_board.rs  lib.rs  usb_log.rs
examples/gen4-rp2350-70ct-clb/src/oxivgl/: display.rs  indev.rs  mod.rs  platform.rs  widget_view.rs
examples/oxivgl-host/: Cargo.toml  README.md  json_node.json  json_node_ds301.json
examples/oxivgl-host/src/: lib.rs  main.rs  od_node.rs  od_view.rs
examples/rp/: Cargo.toml
examples/rp2350-touch-lcd-7/: Cargo.toml  README.md  build.rs
examples/rp2350-touch-lcd-7/.cargo/: config.toml
examples/rp2350-touch-lcd-7/src/: board.rs  gt911.rs  lib.rs  pio_rgb.rs  touch_can.rs  xl2515.rs
examples/rp2350-touch-lcd-7/src/oxivgl/: display.rs  hall_platform.rs  platform.rs
examples/rvt50hqsnwc00-b/: Cargo.toml  README.md  build.rs
examples/rvt50hqsnwc00-b/.cargo/: config.toml
examples/rvt50hqsnwc00-b/lvgl-port/: hall_ui.c  hall_ui.h
examples/rvt50hqsnwc00-b/scripts/: cargo-lvgl.sh
examples/rvt50hqsnwc00-b/src/: hall_ui.rs  lib.rs  rvt50_board.rs
examples/rvt50hqsnwc00-b/src/oxivgl/: indev.rs  mod.rs  platform.rs  touch_dbg.rs  touch_feed.rs
examples/stm32f446re/: Cargo.toml
examples/stm32f446re/.cargo/: config.toml
examples/stm32f746zg/: Cargo.toml
examples/stm32f746zg/.cargo/: config.toml
examples/stm32h5/: Cargo.toml
examples/stm32h503RB/: Cargo.toml
examples/stm32u575ZI/: Cargo.toml
examples/stm32wb/: Cargo.toml
examples/stm32wb-can/: Cargo.toml
examples/stm32wb-can/.cargo/: config.toml
examples/stm32wba/: Cargo.toml
