[package]
edition = "2024"
name = "embassy-canboss-touch-host-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

description = "Host (SDL2) port of the CANbossTouch Rust firmware (EDS screens + SDO client) for UI debugging"

[[bin]]
name = "canboss_touch"
path = "src/main.rs"

[dependencies]
# gen4-vendored oxivgl 0.5.0 (SDL host driver) — dieselbe Version wie die
# canboss_touch-Firmware, damit die Views (node/menu) 1:1 geteilt werden.
oxivgl = { path = "../gen4-ft813-70ctp-h573i-dk/vendor/oxivgl", default-features = false, features = ["log-04"] }
oxivgl-sys = { path = "../gen4-ft813-70ctp-h573i-dk/vendor/oxivgl-sys", default-features = false }

embassy-executor = { version = "0.10.0", path = "../../embassy-executor", features = ["platform-std", "executor-thread", "log"] }
embassy-time = { version = "0.5.1", path = "../../embassy-time", features = ["log", "std"] }
embassy-sync = { version = "0.8.0", path = "../../embassy-sync" }
embassy-futures = { version = "0.1.2", path = "../../embassy-futures" }
critical-section = { version = "1", features = ["std"] }

heapless = "0.8"
env_logger = "0.9.0"
log = "0.4.14"
static_cell = "2"

[build-dependencies]
serde_json = "1"

[profile.release]
debug = 2

[patch.crates-io]
embassy-time = { path = "../../embassy-time" }
embassy-sync = { path = "../../embassy-sync" }
embassy-futures = { path = "../../embassy-futures" }
oxivgl = { path = "../gen4-ft813-70ctp-h573i-dk/vendor/oxivgl" }
oxivgl-sys = { path = "../gen4-ft813-70ctp-h573i-dk/vendor/oxivgl-sys" }

[package.metadata.embassy]
build = [
  { artifact-dir = "out/examples/canboss-touch-host" }
]
