[package]
edition = "2024"
name = "embassy-gen4-rp2350-70ct-clb-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

description = "OxivGL widget demo for 4D Systems gen4-RP2350-70CT-CLB (800×480 RGB, FT5446 touch)"

[dependencies]
embassy-executor = { version = "0.10.0", path = "../../embassy-executor", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-futures = { version = "0.1.2", path = "../../embassy-futures" }
embassy-rp = { version = "0.10.0", path = "../../embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xb", "binary-info"] }
embassy-sync = { version = "0.8.0", path = "../../embassy-sync", features = ["defmt"] }
embassy-time = { version = "0.5.1", path = "../../embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-alloc = { version = "0.6.0", features = ["llff"], optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2"

oxivgl = { version = "0.1.2", default-features = false, optional = true }
oxivgl-sys = { version = "0.1.2", default-features = false, optional = true }

[build-dependencies]
cc = "1.2"

[features]
default = []
oxivgl = ["dep:oxivgl", "dep:oxivgl-sys", "dep:embedded-alloc"]
touch = []

[[bin]]
name = "oxivgl_widget_demo"
required-features = ["oxivgl"]

[profile.release]
debug = 2

[patch.crates-io]
embassy-sync = { path = "../../embassy-sync" }
embassy-time = { path = "../../embassy-time" }
oxivgl = { path = "vendor/oxivgl" }
oxivgl-sys = { path = "vendor/oxivgl-sys" }

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/examples/gen4-rp2350-70ct-clb" }
]
