[package]
edition = "2024"
name = "embassy-oxivgl-host-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

description = "Host (SDL2) port of the protronic OxivGL widget demo for touch/event debugging"

[lib]
name = "embassy_oxivgl_host_examples"
path = "src/lib.rs"

[dependencies]
embassy-executor = { version = "0.10.0", path = "../../embassy-executor", features = ["platform-std", "executor-thread", "log"] }
embassy-time = { version = "0.5.1", path = "../../embassy-time", features = ["log", "std"] }
oxivgl = { path = "../rvt50hqsnwc00-b/vendor/oxivgl", default-features = false, features = ["log-04"] }
oxivgl-sys = { path = "../rvt50hqsnwc00-b/vendor/oxivgl-sys", default-features = false }
touch-hall-common = { path = "../touch-hall-common", features = ["rhai", "log"] }
env_logger = "0.9.0"
log = "0.4.14"
socketcan = "3"
static_cell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Same feature set as touch-hall-common so both share one rhai build.
rhai = { git = "https://github.com/rhaiscript/rhai.git", version = "1", default-features = false, features = [
    "no_std",
    "no_optimize",
    "no_custom_syntax",
    "only_i32",
    "no_module",
    "no_closure",
    "no_position",
] }

[[bin]]
name = "oxivgl_touch_can"
path = "src/bin/oxivgl_touch_can.rs"

[[bin]]
name = "json_node_gui"
path = "src/bin/json_node_gui.rs"

[profile.release]
debug = 2

[patch.crates-io]
embassy-time = { path = "../../embassy-time" }
oxivgl = { path = "../rvt50hqsnwc00-b/vendor/oxivgl" }
oxivgl-sys = { path = "../rvt50hqsnwc00-b/vendor/oxivgl-sys" }

[package.metadata.embassy]
build = [
  { artifact-dir = "out/examples/oxivgl-host" }
]
