[package]
edition = "2021"
name = "embassy-stm32wba-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-stm32 = { version = "0.1.0", path = "../../embassy-stm32", features = [ "defmt", "stm32wba52cg", "time-driver-any", "memory-x", "exti"]  }
embassy-sync = { version = "0.6.0", path = "../../embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.6.0", path = "../../embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", path = "../../embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.4.0", path = "../../embassy-net", features = ["defmt", "udp", "proto-ipv6", "medium-ieee802154", ], optional=true }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2"

embedded-alloc = { version = "0.5.1"} #, features = ["allocator_api"] 
rhai = { git = "https://github.com/rhaiscript/rhai.git", version = "1", default-features = false, features = [
    "no_std",
    "no_optimize",
    "no_float",
    "no_custom_syntax",
    "unchecked",
    "only_i32",
    "no_index",
    "no_module",
    "no_closure",
    "no_position",
    "no_object",
    "no_function"
] }
#wee_alloc = { version = "0.4.5", default-features = false, features = ["static_array_backend"]}
once_cell = { version = "1", default-features = false, features = ["race", "alloc"] }


[profile.release]
debug = 2
